--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Bydrec</string>
+    <string name="fixtures">FIXTURES</string>
+    <string name="ressults">RESILTS</string>
 </resources>
