--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Bydrec</string>
     <string name="fixtures">FIXTURES</string>
     <string name="ressults">RESILTS</string>
+    <string name="posponed">Postponed</string>
 </resources>
